fix: Add scrollable class to list items and custom style for scrollbar

--- a/style.css
+++ b/style.css
@@ -387,22 +387,31 @@
   height: 100%;
 }
 
-.project-hightlights-list,
-.sprint-hightlights-list,
-.milestones-list,
-.resources-list,
-.team-members-list,
-.technical-debt-content-container {
+.scrollable {
   overflow-y: auto;
   overflow-x: hidden;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
-.highlight-component .technical-debt-content {
-  white-space: normal;
-  word-wrap: break-word;
+/* Define custom scrollbar styles */
+.scrollable::-webkit-scrollbar {
+  width: 10px;
 }
+
+.scrollable::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+.scrollable::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 
 
 .chart-container .upper-charts-container {
